--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,8 @@ edition = "2018"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 chrono = "0.4"
+libc = "0.2"
+nix = "0.13"
+mpris = "1.1"
+libpulse-binding = "2.6"
+lazy_static = "1.3.0"
